/*  ByteObf: A Java Bytecode Obfuscator
 *  Copyright (C) [2025] Mohammad Ali Solhjoo mohammadalisolhjoo@live.com
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */



plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}


group = 'io.github.vimasig'
version = '1.7.0'



repositories {
    mavenCentral()
}


java {

    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}


application {
    mainClass = 'codes.rayacode.ByteObf.ui.Launcher'
    applicationDefaultJvmArgs = ['--add-modules', 'javafx.controls,javafx.fxml']

}

javafx {
    version = "23"
    modules = [ 'javafx.controls', 'javafx.fxml' ] // Specify required JavaFX modules. [1, 16]
}



dependencies {

    // ASM
    implementation 'org.ow2.asm:asm:9.8'
    implementation 'org.ow2.asm:asm-tree:9.8'
    implementation 'org.ow2.asm:asm-commons:9.8'
    implementation 'org.ow2.asm:asm-util:9.8'

    // Gson
    implementation 'com.google.code.gson:gson:2.13.1'
    // commons-cli
    implementation 'commons-cli:commons-cli:1.9.0'
}


processResources {
    expand(project.properties)
}

jar {
    manifest {
        attributes('Implementation-Version': project.version)
    }
}


shadowJar {

    manifest.inheritFrom project.tasks.jar.manifest

    archiveClassifier = 'all'
}


build.dependsOn(shadowJar)